# NEU_Exoskeleton

./: Environment.sh  LICENSE  README.md  configure.sh
IMU_STM32/Listing/: STM32-DEMO.map  startup_stm32f10x_hd.lst
IMU_STM32/Output/: STM32-DEMO.axf  STM32-DEMO.lnp  STM32-DEMO.plg  core_cm3.d  main.d  stm32_adc.d  stm32_dac.d  stm32_led.crf  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_dac.d  stm32f10x_dma.d  stm32f10x_flash.crf  stm32f10x_it.crf  stm32f10x_it.d  stm32f10x_rcc.crf  stm32f10x_spi.d  stm32f10x_tim.crf  stm32f10x_usart.d  system_stm32f10x.crf  system_stm32f10x.d
IMU_STM32/USER/: JLinkLog.txt  STM32-DEMO.uvguix.hemingshan  STM32-DEMO.uvoptx  STM32-DEMO_USART1-DEMO.dep
STM32_for_ADC/Listing/: STM32-DEMO.map
STM32_for_ADC/Output/: STM32-DEMO.axf  STM32-DEMO.build_log.htm  STM32-DEMO.hex  STM32-DEMO.htm  STM32-DEMO_USART1-DEMO.dep  main.crf  misc.crf  misc.d  stm32_adc.crf  stm32_dac.crf  stm32_led.d  stm32_tim2.crf  stm32_tim2.d  stm32f10x_dac.crf  stm32f10x_dma.crf  stm32f10x_flash.d  stm32f10x_gpio.crf  stm32f10x_gpio.d  stm32f10x_rcc.d  stm32f10x_spi.crf  stm32f10x_tim.d  (+3 more)
device_hardware/: CMakeLists.txt  package.xml
eci/: CMakeLists.txt  package.xml
exoskeleton_control/: CMakeLists.txt  package.xml
exoskeleton_control/Pipe_File/: my_shared_memory
exoskeleton_control/config/: exoskeleton_control.yaml
exoskeleton_control/include/eci/: EciDemo113.h  EciDemoCommon.h  Motor.hpp  shmfifo.h
exoskeleton_control/include/exoskeleton_control/: Admittance_control.hpp  Admittance_control_DecareSpace.hpp  Admittance_control_Hardware.hpp  Admittance_control_Software.hpp  Force_Data_Filter.hpp
exoskeleton_control/include/exoskeleton_dynamics/: exoskeleton_dynamics.hpp
exoskeleton_control/include/exoskeleton_kinematics/: exoskeleton_kinematics.hpp
exoskeleton_control/launch/: exoskeleton_control.launch  exoskeleton_moveit_planning_execution.launch
exoskeleton_control/src/: Admittance_control.cpp  Admittance_control_Hardware.cpp  Admittance_control_Software.cpp  Client.c  Client.cpp  Get.cpp  Position_control.cpp  Put.cpp  Server.c  Server.cpp  Test.cpp  exoskeleton_dynamics.cpp
exoskeleton_control/src/Admittance_Control/: Admittance_control_Hardware.cpp  Admittance_control_Software.cpp
exoskeleton_control/src/Eci/: Angle_Accept.cpp  Angle_Driver.cpp  Angle_Feedback.cpp  Angle_Send.cpp  EciDemo113.cpp  EciDemoCommon.c  Eci_keyboard.cpp  LinuxEciDemo.cpp  Test.cpp  shmfifo.c
exoskeleton_control/src/Kinematic_Dynamic/: exoskeleton_kinematics.cpp
exoskeleton_description/: CMakeLists.txt  README.md  package.xml
exoskeleton_description/config/: controllers.yaml  gazebo_ros_control_params.yaml  joint_names.yaml
exoskeleton_description/launch/: exoskeleton_controller_utils.launch  exoskeleton_gazebo.launch  exoskeleton_upload.launch  exoskeleton_view_rviz.launch  gazebo.launch  view_robot_launch.py
exoskeleton_description/meshes/: Back_Base_Link.STL
exoskeleton_description/meshes/visual/: Left_Ankle_Link.stl
exoskeleton_description/urdf/: lower_limb.csv  lower_limb.urdf
exoskeleton_description/worlds/: empty.world
exoskeleton_matlab/: Admittace_Control.slx  Exoskeleton_DH.m  Forward_Kinetic.m  Forward_Kinetic.slx  Inverse_Kinetic.m  Inverse_Kinetic.slx  Jaccobi.slx  Jaccobi_tool.m  PID_Position_Control.slx  README.md  kps6_T.slx
exoskeleton_modeling/: CMakeLists.txt  package.xml  tree.md
exoskeleton_moveit/: .setup_assistant  CMakeLists.txt  package.xml
exoskeleton_param/: CMakeLists.txt  package.xml
exoskeleton_param/data/: center_point.csv  effort.csv  position.csv
exoskeleton_param/msg/: JointState_self.msg
exoskeleton_param/scripts/: center_point_state.py  data_plot.py  joint_state.py
exoskeleton_param/src/: joint_state.cpp  tf_listener.cpp
gait_recognition/: README.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
pattern_recognition/: package.xml  setup.cfg  setup.py
pid_controller/: CMakeLists.txt
plantar-pressure-sensor/: README.md  Serial.py  data_pretreatment.py  data_process.py  model.py  pre_labels_cases.py
powered_exoskeleton/: CMakeLists.txt  package.xml
powered_exoskeleton/include/: ECI_cantype.h  test2.h
powered_exoskeleton/include/powered_exoskeleton/: EciDemo113.h  test.h
powered_exoskeleton/src/: EciDemo113.cpp  EciDemoCommon.c  LinuxEciDemo.cpp
rbf_controller/: CMakeLists.txt  package.xml  rbf_controller_plugin.xml
security_module/: CMakeLists.txt  package.xml
security_module/Scripts/: 2021_4_28.py  2021_5_22.py  2021_5_5.py
security_module/csv_File/: 1.csv  2.csv  2021_5_19.csv  3.csv  4.csv  5.csv  6.csv
security_module/src/: Joint_Input.cpp  Joint_Record.cpp  Joint_Record_25.cpp  security_position.cpp
sensor_module/: CMakeLists.txt
sensor_module/Ardunio_Code/: M6_Muscle_electric_sensor_Code.ino  Muscle_Electric_Sensor_Code.ino  Test.ino
sensor_module/Ardunio_Code/M6_Muscle_electric_sensor_Code/: M6_Muscle_electric_sensor_Code.ino
sensor_module/Ardunio_Code/Test/: Test.ino
sensor_module/csv_File/: 1.csv  1_1.4.csv  2_2.csv  2_5_km.csv  2_km.csv  3.csv  3_5_km.csv  3_km.csv  4.csv  4_5_km.csv  4_km.csv  5.csv  5_km.csv  6.csv
sensor_module/include/sensor_module/: MPU6050.hpp  Piezoelectric.hpp  Serial.hpp
sensor_module/launch/: exoskeleton_sensor_launch.py  gait_sensor_launch.py  human_sensor_launch.py  sensor_module_launch.py
sensor_module/src/: MPU6050.cpp  MPU6050_Calf.cpp  MPU6050_Thigh.cpp  Piezoelectric.cpp  Sensor.cpp  Sensor_Human.cpp
sensor_module/src/Force/: Piezoelectric.cpp  Piezoelectric_6.cpp  Piezoelectric_8.cpp
sensor_module/src/IMU/: Exoskeleton_Calf.cpp  Exoskeleton_Left_Calf.cpp  Exoskeleton_Left_Thigh.cpp  Exoskeleton_Right_Calf.cpp  Exoskeleton_Right_Thigh.cpp  Exoskeleton_Thigh.cpp  Human_Left_Calf.cpp  Human_Left_Thigh.cpp  Human_Right_Calf.cpp  Human_Right_Thigh.cpp  MPU6050.cpp  MPU6050_Calf.cpp  MPU6050_Thigh.cpp
sensor_module/src/Record/: Gait_Data_Record.cpp
sensor_module/src/Sensor_Fusion/: Sensor_Exoskeleton.cpp  Sensor_Gait.cpp  Sensor_Human.cpp
(+209 files in other folders)
