<?xml version="1.0"?>
<package>
  <name>exoskeleton_description</name>
  <version>1.3.3</version>
  <description>The exoskeleton_description package</description>
  <author email="hemingshan_1999@163.com">Pouya He</author>
  <maintainer email="hemingshan_1999@163.com">Pouya He</maintainer>
  <url type="website">http://wiki.ros.org/aubo_description</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>